# financial-telegram-bot

./: .gitignore  Dockerfile  categories.py  db.py  exceptions.py  expenses.py  middlewares.py  pyproject.toml  server.py
db/: finance.db
